test_suite/ui/sneaky_make_bitflags.stderr
error[E0308]: mismatched types
  --> ui/sneaky_make_bitflags.rs:16:13
   |
16 |     let x = make_bitflags!(Test::{C});
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |             |
   |             expected `Test`, found `u8`
   |             expected due to this
   |
   = note: this error originates in the macro `make_bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)
